# WLM-World-Generation-Protocol

./: LICENSE  README.md  pyproject.toml
docs/: api.md  overview.md  roadmap.md  world-rules.md
examples/: causal_world.md  narrative_world.md  simple_world.md
src/wlm_world_generation_protocol/: __init__.py  api.py  cli.py  entity_engine.py  graph_builder.py  region_engine.py  rule_engine.py  seed_engine.py  timeline_engine.py
tests/: test_cli.py  test_end_to_end.py  test_entities.py  test_graph_builder.py  test_regions.py  test_rules.py  test_seed.py  test_timeline.py
